# shop_api_django

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: home.yml
items/: admin.py  exceptions.py  forms.py  models.py  urls.py  views.py
items/migrations/: 0001_initial.py
items/templates/items/: item_form.html  item_list.html
items/tests/: test_models.py
members/: admin.py  exceptions.py  forms.py  models.py  urls.py  views.py
members/migrations/: 0001_initial.py  0002_member_city_member_street_member_zipcode.py
members/templates/members/: member_form.html  member_list.html
members/tests/: test_models.py
orders/: admin.py  forms.py  models.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_orderitem.py
orders/templates/orders/: order_form.html  order_list.html
orders/tests/: test_models.py
shop_django/: settings.py  urls.py
shop_django/settings/: collectstatic.py  common.py  dev.py  prod.py
templates/: _form.html  _get_form.html  layout.html  root.html
