[tool.poetry]
name = "shop_django"
version = "0.1.0"
description = ""
authors = ["Jaesik <joje1283@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"
gunicorn = {extras = ["uvicorn"], version = "^20.1.0"}
uvicorn = "^0.17.6"
psycopg2 = "^2.9.3"
django-bootstrap4 = "^22.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
